--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Cyric Ng
-description: A template for your AOS C111/204 project site.
+description: AOS C111/204
 logo: /assets/IMG/template_logo.png
 show_downloads: true
 theme: jekyll-remote-Cayman
